<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CustomCardView"
    android:id="@+id/itemExpenseCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/expenseTitle"
            style="@style/CustomPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/expenseAmount"
            style="@style/CustomPrimaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_amount"
            app:layout_constraintBaseline_toBaselineOf="@+id/expenseTitle"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/expenseCreatedOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_date"
            style="@style/CustomSecondaryText2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/expenseAmount" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>