<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/categoryCV"
    style="@style/ExpenseryPrimaryCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/categoryIcon"
            android:layout_width="42dp"
            android:layout_height="42dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cat_other" />

        <TextView
            android:id="@+id/titleTextView"
            android:padding="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/category_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/categoryIcon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/empty_amount"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textColor="@color/colorTextPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/titleTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/budgetTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/empty_amount"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/titleTextView"
            app:layout_constraintTop_toBottomOf="@+id/catItemBudget"
            app:layout_constraintWidth_default="spread" />

        <TextView
            android:id="@+id/catItemBudget"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/budget"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/titleTextView"
            app:layout_constraintTop_toBottomOf="@+id/totalTextView"
            app:layout_constraintWidth_default="spread" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</com.google.android.material.card.MaterialCardView>
